# HomeWork_14_1_OOP

./: 15.1_main.py  README.md  main.py  pyproject.toml
src/: category.py  product.py  product_iterator.py  task.py  utils.py
tests/: conftest.py  test_category.py  test_product.py  test_task.py
