[tool.poetry]
name = "homework-14-1-oop"
version = "0.1.0"
description = ""
authors = ["Roman Z <roman-z@inbox.ru>"]
readme = "README.md"
packages = [{include = "homework_14"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
